# AlphaGAN-Image-Matting

./: LICENSE  README.md  README_ru.md  cfg_loader.py  config.py  dataset.py  loader.py  main.py  pyproject.toml  requirements.txt  schemas.py  train.py  utils.py
configs/: config.yaml  train_config.yaml
losses/: __init__.py  base_loss.py  gan_loss.py  l_alpha_loss.py  l_composite_loss.py  l_grad_loss.py  l_laplacian_loss.py  perceptual_loss.py
models/: __init__.py  alphagan.py  aspp.py  patchgan.py  vgg.py
train_pipeline/: __init__.py  test_one_epoch.py  train_main.py  train_one_epoch.py
transforms/: __init__.py  custom_transforms.py  trans_pipeline.py
transforms/models/: __init__.py  base.py  compositing.py  crops.py  geometry.py  normalize.py
utils/: checkpointing.py  tb_logging.py  terminal_utils.py  train_utils.py
